--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 
 dependencies {
     implementation 'io.javalin:javalin:5.4.2'
-    implementation 'com.opencsv:opencsv:5.5.1'
+    implementation 'org.jetbrains.kotlinx:dataframe:0.9.1'
 }
 
 compileKotlin {
