--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation 'io.javalin:javalin:5.4.2'
     implementation 'io.javalin:javalin-openapi:3.13.12'
     implementation 'org.jetbrains.kotlinx:dataframe:0.9.1'
-
+    implementation 'org.slf4j:slf4j-simple:2.0.6'
 }
 
 compileKotlin {
