--- a/02-Servicio_completo/build.gradle
+++ b/02-Servicio_completo/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     implementation 'io.javalin:javalin-openapi:3.13.12'
     implementation 'org.jetbrains.kotlinx:dataframe:0.9.1'
     implementation 'org.slf4j:slf4j-simple:2.0.6'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
 }
 
 compileKotlin {
