--- a/.github/workflows/workflow-ci-.yml
+++ b/.github/workflows/workflow-ci-.yml
@@ -37,7 +37,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: npm install and test
-        working-directory: "./03-Cliente_de_navegador/workshop\\ app"
+        working-directory: "./03-Cliente_de_navegador/workshop app"
         run: |
           npm ci
           npm install
