--- a/.github/workflows/workflow-ci-.yml
+++ b/.github/workflows/workflow-ci-.yml
@@ -9,13 +9,16 @@ on:
     # Ejecutar en todas las ramas
     branches: []
 
+defaults:
+ run:
+  working-directory: "./03-Cliente_de_navegador/workshop app"
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: npm install and build webpack     
-        working-directory: "./03-Cliente_de_navegador/workshop app"
         run: |
           npm ci
           npm install
@@ -36,7 +39,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: npm install and test
-        working-directory: "./03-Cliente_de_navegador/workshop app"
         run: |
           npm ci
           npm install
