--- a/.github/workflows/workflow-ci-.yml
+++ b/.github/workflows/workflow-ci-.yml
@@ -2,8 +2,8 @@ name: CI - CP 2023 data API
 
 on:
   push:
-    # Ejecutar en todas las ramas
-    branches: []
+    branches-ignore: 
+      - main
 
   pull_request:
     # Ejecutar en todas las ramas
@@ -26,6 +26,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: build
 
     strategy:
       matrix:
