--- a/.github/workflows/workflow-ci-.yml
+++ b/.github/workflows/workflow-ci-.yml
@@ -21,6 +21,7 @@ jobs:
       - name: npm install and build webpack     
         run: |
           npm ci
+          npm audit fix --force
           npm install
           npm run build --if-present
 
@@ -42,7 +43,7 @@ jobs:
           cache-dependency-path: "./03-Cliente_de_navegador/workshop app/package-lock.json"
       - name: npm install and test
         run: |
-          npm ci
+          npm audit fix --force
           npm install
           npm test
         env:
